[gd_scene load_steps=14 format=3 uid="uid://0ixiym0ov3ad"]

[ext_resource type="Script" uid="uid://c088kye1hl7k8" path="res://scripts/palmMenu.gd" id="1"]
[ext_resource type="Script" uid="uid://cde3r11qku5hy" path="res://addons/godot-xr-tools/interactables/interactable_area_button.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dma0lyrfkqdol" path="res://scenes/cardHand.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://de8eh4sejktos" path="res://assets/icons/truco.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dejy7jgrey2cw" path="res://assets/icons/setting.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bgjl1e3pv6gly" path="res://assets/icons/menu.png" id="6"]

[sub_resource type="StandardMaterial3D" id="mat_truco"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("4")

[sub_resource type="PlaneMesh" id="mesh_truco"]
material = SubResource("mat_truco")
size = Vector2(0.25, 0.25)

[sub_resource type="CylinderShape3D" id="collider"]
radius = 0.09

[sub_resource type="StandardMaterial3D" id="mat_config"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("5")

[sub_resource type="PlaneMesh" id="mesh_config"]
material = SubResource("mat_config")
size = Vector2(0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="mat_menu"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("6")

[sub_resource type="PlaneMesh" id="mesh_menu"]
material = SubResource("mat_menu")
size = Vector2(0.2, 0.2)

[node name="PalmMenu" type="MeshInstance3D"]
script = ExtResource("1")

[node name="ScoreLabel" type="Label3D" parent="."]

[node name="CardHand" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0996825)

[node name="ButtonPannel" type="Node3D" parent="."]

[node name="TrucoButton" type="Area3D" parent="ButtonPannel"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0.085)
script = ExtResource("2")
button = NodePath("MeshInstance3D")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ButtonPannel/TrucoButton"]
mesh = SubResource("mesh_truco")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ButtonPannel/TrucoButton"]
shape = SubResource("collider")

[node name="ConfigButton" type="Area3D" parent="ButtonPannel"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.15, 0, 0.085)
script = ExtResource("2")
button = NodePath("MeshInstance3D")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ButtonPannel/ConfigButton"]
mesh = SubResource("mesh_config")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ButtonPannel/ConfigButton"]
shape = SubResource("collider")

[node name="MenuButton" type="Area3D" parent="ButtonPannel"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.15, 0, 0.085)
script = ExtResource("2")
button = NodePath("MeshInstance3D")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ButtonPannel/MenuButton"]
mesh = SubResource("mesh_menu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ButtonPannel/MenuButton"]
shape = SubResource("collider")

[connection signal="button_pressed" from="ButtonPannel/TrucoButton" to="." method="_on_button_truco_pressed"]
[connection signal="button_pressed" from="ButtonPannel/ConfigButton" to="." method="_on_button_config_pressed"]
[connection signal="button_pressed" from="ButtonPannel/MenuButton" to="." method="_on_button_menu_pressed"]
